<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chamCongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:text="@string/cc"
            android:textAlignment="center"
            android:textAppearance="@style/Title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/MaCongNhan"
            android:textAppearance="@style/nomal"
            android:paddingRight="5dp"/>
        <TextView
            android:id="@+id/tvMaCongNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/nomal"
            android:padding="10dp"
            android:background="@drawable/border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/MaChamCong"
            android:textAppearance="@style/nomal"
            android:paddingRight="5dp"/>
        <EditText
            android:id="@+id/edtMaChamcong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/nomal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/NgayChamCong"
            android:textAppearance="@style/nomal"
            android:paddingRight="5dp"/>
        <EditText

            android:id="@+id/edtNgayChamCong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAppearance="@style/nomal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnThem"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corners"
            android:text="@string/Them"
            android:textAppearance="@style/button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSuaCC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_corners"
            android:text="@string/Sua"
            android:textAppearance="@style/button"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:text="@string/textViewDS"
            android:textAppearance="@style/Title"
            android:textAlignment="center"
             />

    </LinearLayout>

    <ListView
        android:id="@+id/lvDanhSachChamCong"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>