<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChiTietChamCongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:text="@string/CTCC"
            android:textAlignment="center"
            android:textAppearance="@style/Title" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MaChamCong"
                android:textAppearance="@style/nomal"/>

            <TextView
                android:id="@+id/tvMCC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/nomal"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/MaSP"
                    android:textAppearance="@style/nomal" />

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:background="@drawable/spinner_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner

                        android:id="@+id/spnSP"
                        android:paddingRight="5sp"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown">

                    </Spinner>


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/TenSP"
                android:textAppearance="@style/nomal" />

            <TextView
                android:id="@+id/tvTenSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/nomal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/SoThanhPham"
                android:textAppearance="@style/nomal" />

            <EditText
                android:id="@+id/edtSoThanhPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAppearance="@style/nomal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/SoPhePham"
                android:textAppearance="@style/nomal"/>

            <EditText
                android:id="@+id/edtSoPhePham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAppearance="@style/nomal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnThemCTCC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:text="@string/Them"
                android:textAppearance="@style/button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSuaCTCC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:text="@string/Sua"
                android:textAppearance="@style/button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/textViewCTCC"
                android:textAlignment="center"
                android:textAppearance="@style/Title"
               />

            <ListView
                android:id="@+id/lvCTCC"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>